--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -14,6 +14,7 @@
         <script type="text/javascript" src="static/js/vendors/html10n.js?v=<%=settings.randomVersionString%>"></script>
         <script type="text/javascript" src="static/js/l10n.js?v=<%=settings.randomVersionString%>"></script>
         <script src="static/js/vendors/jquery.js"></script>
+        <script src="static/js/vendors/jquery-migrate-3.3.2.js"></script>
         <script src="static/js/index.js"></script>
 
         <style>
